2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* winsup.h (access_worker): Declare with added fhandler_base parameter.
	* syscalls.cc (access_worker): Accommodate extra fhandler_base
	argument.  Use it instead of stat_worker to determine stat information,
	when appropriate.
	* fhandler.cc (fhandler_base::device_access_denied): Pass fhandler
	pointer to access_worker so that it can use the proper method for
	determining stat information.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Ditto.
	* path.cc (path_conv::check): Add read-only attribute to /cygdrive
	default settings.

2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (ctrl_c_handler): Remove this thread from the signal
	handler chain.

2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::stub): Revert previous change and again
	subsume cygthread::stub2.  Just return from function now since
	ExitThread is guaranteed by automatic _threadinfo wrapper.  Define as
	per ThreadProc convention.
	(cygthread::stub2): Remove.
	(cygthread::simplestub): Perform similar operations to cygthread::stub.
	(cygthread::simplestub2): Remove.
	* cygthread.h (cygthread::stub): Declare as per ThreadProc convention.
	(cygthread::stub2): Remove declaration.
	(cygthread::simplestub): Declare as per ThreadProc convention.
	(cygthread::simplestub2): Remove declaration.
	* cygtls.h (_threadinfo::call): Define first argument as per ThreadProc
	convention.
	(_threadinfo::call2): Ditto.
	(_tlsbase): Define as char * pointer.
	(_tlstop): New definition.
	(_main_tls): Define here.
	* dcrt0.cc (alloc_stack): Revert previous change which called
	init_thread since information would be overwritten by fork later
	anyway.
	(dll_crt0_1): Use _tlsbase and _tlstop for setting stack bottom, top.
	* exceptions.cc: Move _main_tls declaration to cygtls.h.
	(_threadinfo::call): Define first argument as per ThreadProc
	convention.
	(_threadinfo::call2): Call ExitThread with thread function return