@@ -1,3 +1,9 @@
+2003-12-15  Thomas Pfaff  <tpfaff@gmx.net>
+
+	* thread.cc (pthread::init_main_thread): Make sure that the main thread
+	has valid handles.
+	(pthread::create_cancel_event): Fix error message.
+
 2003-12-14  Christopher Faylor  <cgf@redhat.com>
 
 	* winsup.h (access_worker): Declare with added fhandler_base parameter.
